# legible-weights

./: .gitignore  MORNING_2026-05-19.md  OVERNIGHT_2026-05-19.md  README.md  pyproject.toml
experiments/diffusion_vs_ar_comparison/: NOTES.md  compare.py  inspect_pairs.py  paired_features_v0.1.md  train.py
experiments/diffusion_vs_ar_comparison/alignment_v0.1/: alignment.json  alignment_summary.json
experiments/diffusion_vs_ar_comparison/mdlm/: modeling_mdlm.py
experiments/qwen2_5_0_5b/: NOTES.md  features_v0.1.json  features_v0.1.md  features_v0.1_excl4.json  features_v0.1_excl4.md  features_v0.2.json  features_v0.2.md  inspect_features.py  train_l9.py
experiments/sae_under_quantization/: NOTES.md  run_experiment.py
experiments/sae_under_quantization/v0.1/: feature_active_mask_int8.npy  per_feature_corr_int8.npy  per_feature_corr_nf4.npy  report.json
src/legible_weights/data/: activations.py
src/legible_weights/eval/: alignment.py  eval_sae.py  features.py  recovery.py
src/legible_weights/sae/: train.py
