[project]
name = "legible-weights"
version = "0.0.1"
description = "Sparse autoencoders and behavioral tracing for small open-weight LLMs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.40",
    "huggingface_hub>=0.23",
    "datasets>=2.19",
    "einops>=0.7",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
